--- a/ruoyi-admin/src/main/resources/application-druid.yml
+++ b/ruoyi-admin/src/main/resources/application-druid.yml
@@ -9,8 +9,8 @@ spring:
                 url: jdbc:mysql://localhost:3306/ry?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
 #                username: root
 #                password: password
-                username: root
-                password: 12345678
+                username: DataUser
+                password: 123456
             # 从库数据源
             slave:
                 # 从数据源开关/默认关闭
