--- a/ruoyi-admin/src/main/resources/application-druid.yml
+++ b/ruoyi-admin/src/main/resources/application-druid.yml
@@ -10,7 +10,7 @@ spring:
 #                username: root
 #                password: password
                 username: root
-                password: 12345678
+                password: 123456
             # 从库数据源
             slave:
                 # 从数据源开关/默认关闭
