--- a/ruoyi-admin/src/main/resources/application-druid.yml
+++ b/ruoyi-admin/src/main/resources/application-druid.yml
@@ -6,11 +6,11 @@ spring:
         druid:
             # 主库数据源
             master:
-                url: jdbc:mysql://www.ylxteach.net/xm05_2022?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+                url: jdbc:mysql://www.ylxteach.net:3366/xm05_2022?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
 #                username: root
 #                password: password
                 username: Administrator
-                password: XMClassroom20202023
+                password: XWClassroom20202023
             # 从库数据源
             slave:
                 # 从数据源开关/默认关闭
