--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <name>ruoyi</name>
     <url>http://www.ruoyi.vip</url>
-    <description>若依管理系统</description>
+    <description>XM-05 民宿旅游平台</description>
     
     <properties>
         <ruoyi.version>4.7.5</ruoyi.version>
@@ -192,6 +192,13 @@
                 <version>${ruoyi.version}</version>
             </dependency>
 
+            <!-- 待办事项-->
+            <dependency>
+                <groupId>com.ruoyi</groupId>
+                <artifactId>ruoyi-todolist</artifactId>
+                <version>${ruoyi.version}</version>
+            </dependency>
+
             <!-- 系统模块-->
             <dependency>
                 <groupId>com.ruoyi</groupId>
@@ -217,6 +224,7 @@
         <module>ruoyi-quartz</module>
         <module>ruoyi-generator</module>
         <module>ruoyi-common</module>
+        <module>ruoyi-todolist</module>
     </modules>
     <packaging>pom</packaging>
 
