完成小程序热门民宿的查序，剩统；还修改了info_index和history_index完成按钮跳转对应页面；还微调了history_index的形式和内容

--- a/wx/project.config.json
+++ b/wx/project.config.json
@@ -1,5 +1,5 @@
 {
-  "appid": "touristappid",
+  "appid": "wxf9967a9f158a1d02",
   "compileType": "miniprogram",
   "libVersion": "2.17.0",
   "packOptions": {
