更新了个人中心

--- a/wx/app.json
+++ b/wx/app.json
@@ -12,7 +12,9 @@
     "pages/info/room_order/room_order",
     "pages/info/speciality_order/speciality_order",
     "pages/info/index/info_index",
-    "pages/history/index/history_index"
+    "pages/history/index/history_index",
+    "pages/user/user_info/user_info",
+    "pages/user/modify_info/modify_info"
   ],
   "window": {
     "backgroundTextStyle": "light",
