修复热门民宿表述性问题，完成热门特产查序

--- a/wx/app.json
+++ b/wx/app.json
@@ -13,7 +13,8 @@
     "pages/info/speciality_order/speciality_order",
     "pages/info/index/info_index",
     "pages/history/index/history_index",
-    "pages/info/landlord/statistics/statistics"
+    "pages/info/landlord/statistics/statistics",
+    "pages/info/specialty/statistics/statistics"
   ],
   "window": {
     "backgroundTextStyle": "light",
