--- a/wx/app.json
+++ b/wx/app.json
@@ -16,7 +16,8 @@
     "pages/user/user_info/user_info",
     "pages/user/modify_info/modify_info",
     "pages/info/landlord/statistics/statistics",
-    "pages/user/money_add/money_add"
+    "pages/user/money_add/money_add",
+    "pages/info/speciality/statistics/statistics"
   ],
   "window": {
     "backgroundTextStyle": "light",
