--- a/wx/app.json
+++ b/wx/app.json
@@ -24,7 +24,10 @@
     "pages/user/todo/modify/modify_todo",
     "pages/user/comment/detail/comment_detail",
     "pages/user/comment/add/comment_add",
-    "pages/user/comment/statistics/statistics"
+    "pages/user/comment/statistics/statistics",
+    "pages/info/speciality/statistics/top_specialty_sta",
+    "pages/user/weather/statistics/weather_sta",
+    "pages/user/weather/add/weather_add"
   ],
   "window": {
     "backgroundTextStyle": "light",
