--- a/wx/app.json
+++ b/wx/app.json
@@ -27,7 +27,8 @@
     "pages/user/comment/statistics/statistics",
     "pages/info/speciality/statistics/top_specialty_sta",
     "pages/user/weather/statistics/weather_sta",
-    "pages/user/weather/add/weather_add"
+    "pages/user/weather/add/weather_add",
+    "pages/user/weather/modify/weather_modify"
   ],
   "window": {
     "backgroundTextStyle": "light",
