--- a/wx/app.json
+++ b/wx/app.json
@@ -13,7 +13,22 @@
     "pages/info/speciality_order/speciality_order",
     "pages/info/index/info_index",
     "pages/history/index/history_index",
-    "pages/info/landlord/statistics/statistics"
+    "pages/user/user_info/user_info",
+    "pages/user/modify_info/modify_info",
+    "pages/info/landlord/statistics/statistics",
+    "pages/user/money_add/money_add",
+    "pages/info/room_order/house_detail",
+    "pages/info/room_order/room_detail",
+    "pages/user/todo/add/add_todo",
+    "pages/user/todo/statistics/todo_statistics",
+    "pages/user/todo/modify/modify_todo",
+    "pages/user/comment/detail/comment_detail",
+    "pages/user/comment/add/comment_add",
+    "pages/user/comment/statistics/statistics",
+    "pages/info/speciality/statistics/top_specialty_sta",
+    "pages/user/weather/statistics/weather_sta",
+    "pages/user/weather/add/weather_add",
+    "pages/user/weather/modify/weather_modify"
   ],
   "window": {
     "backgroundTextStyle": "light",
