--- a/wx/app.json
+++ b/wx/app.json
@@ -29,7 +29,8 @@
     "pages/user/weather/statistics/weather_sta",
     "pages/user/weather/add/weather_add",
     "pages/user/weather/modify/weather_modify",
-    "pages/history/room/statistics/sta_room_history"
+    "pages/history/room/statistics/sta_room_history",
+    "pages/history/room/modify/modify_room_history"
   ],
   "window": {
     "backgroundTextStyle": "light",
