完成民宿历史订单评论的查询，其中图片问题是本地图片共同存在的，即通过localhost路径访问的图片均显示不出来，并非民宿历史订单图片代码的问题

--- a/wx/app.json
+++ b/wx/app.json
@@ -30,7 +30,8 @@
     "pages/user/weather/add/weather_add",
     "pages/user/weather/modify/weather_modify",
     "pages/history/room/statistics/sta_room_history",
-    "pages/history/room/modify/modify_room_history"
+    "pages/history/room/modify/modify_room_history",
+    "pages/history/room/comment/cmt_room"
   ],
   "window": {
     "backgroundTextStyle": "light",
