--- a/wx/app.json
+++ b/wx/app.json
@@ -24,7 +24,13 @@
     "pages/user/todo/modify/modify_todo",
     "pages/user/comment/detail/comment_detail",
     "pages/user/comment/add/comment_add",
-    "pages/user/comment/statistics/statistics"
+    "pages/user/comment/statistics/statistics",
+    "pages/info/speciality_order/specialty_order_view",
+    "pages/info/speciality_order/speciality_buy",
+    "pages/history/speciality/specialty_history_detail",
+    "pages/history/speciality/specialty_all_comment",
+    "pages/info/speciality_order/specialty_comment",
+    "pages/info/speciality_order/statistics"
   ],
   "window": {
     "backgroundTextStyle": "light",
